Fix: horizontal overflow in summary

--- a/src/books-template/style.css
+++ b/src/books-template/style.css
@@ -23,7 +23,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 275px;
+  width: 285px;
   bottom: 0;
   background-color: rgb(250, 250, 250);
   padding: 1%;
